fixed mobile overflow

--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -25,8 +25,11 @@
 
     &__content {
         margin: 0 3rem;
-        padding: 1rem 3rem;
         width: 100%;
+
+        @include breakpoint(desktop) {
+            padding: 1rem 3rem;
+        }
     }
 
     &__header {
